# crusty

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COVERAGE_REVIEW_SUMMARY.md  Cargo.toml  LICENSE.txt  QUICK_START.md  README.md  SYNTAX_REFERENCE.md  TEST_COVERAGE_PROGRESS.md  TEST_COVERAGE_REPORT.md  VALIDATION_REPORT.md  build.rs.example  test_attributes.rs  test_lexer.rs
docs/: README.md  build-rs-integration.md  task-2.6-summary.md
example/: Cargo.toml  README.md  build.rs
example/src/: attributes.crst  closures.crst  defines.crst  functions.crst  generics.crst  macros.crst  main.crst  main.rs  methods.crst  ranges.crst  rust_escape.crst  slices.crst  structs.crst  typedef_demo.crst
proptest-regressions/: codegen_properties.txt  pretty_properties.txt
src/: ast.rs  c_style_declaration_tests.rs  cli.rs  cli_properties.rs  codegen.rs  codegen_advanced_tests.rs  codegen_bitwise_tests.rs  codegen_crusty_advanced_tests.rs  codegen_crusty_tests.rs  codegen_properties.rs  crustydoc.rs  error.rs  error_coverage_tests.rs  lexer.rs  lexer_coverage_tests.rs  lib.rs  main.rs  nested_function_tests.rs  parser.rs  parser_additional_coverage_tests.rs  parser_advanced_tests.rs  parser_coverage_tests.rs  parser_edge_case_tests.rs  parser_error_tests.rs  parser_properties.rs  pretty.rs  pretty_properties.rs  rustc.rs  rustc_integration_tests.rs  semantic.rs  semantic_additional_tests.rs  semantic_advanced_tests.rs  semantic_coverage_tests.rs  semantic_expression_coverage_tests.rs  semantic_expression_tests.rs  semantic_return_tests.rs  utils.rs  (+3 more)
(+149 files in other folders)
