[package]
name = "crustyc"
version = "0.1.0"
edition = "2021"
authors = ["Crusty Programming Language"]
license = "MIT"
description = "A bidirectional transpiler between Crusty (C-like syntax) and Rust"
repository = "https://github.com/major0/crusty"

[[bin]]
name = "crustyc"
path = "src/main.rs"

[[bin]]
name = "crustydoc"
path = "src/crustydoc.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
prettyplease = "0.2"
toml = "0.7"
codespan-reporting = "0.11"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
